--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,10 +21,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.web_view_demo"
+        applicationId = "com.jhalto.web_view_demo"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 21
+        minSdk = 24
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -42,3 +42,8 @@ android {
 flutter {
     source = "../.."
 }
+//dependencies {
+//    // ...
+//    implementation("com.google.android.material:material:<version>")
+//    // ...
+//}
