--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,21 @@ dependencies:
   flutter_spinkit:
   liquid_pull_to_refresh:
   flutter_inappwebview: ^6.1.5
+  provider:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.1
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/logo/app_logo.png"
+  remove_alpha_ios: true
+  min_sdk_android: 24
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "lib/logo/app_logo.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
