--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    <uses-permission android:name="android.permission.INTERNET"/>-->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="E-Commerce"
+        android:label="W7D"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
