--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,11 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "lib/logo/app_logo.png"
+  image_path: "lib/images/w7d.jpeg"
   remove_alpha_ios: true
-  min_sdk_android: 24
+  min_sdk_android: 21
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "lib/logo/app_logo.png"
+  adaptive_icon_foreground: "lib/images/w7d.jpeg"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -72,9 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
