--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_spinkit:
   provider:
   flutter_inappwebview: ^6.1.5
-
+  url_launcher:
 dev_dependencies:
   flutter_test:
     sdk: flutter
